--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc: ^8.1.6 # For state management (Cubit)
   equatable: ^2.0.5    # To compare objects, used with BLoC states
   lottie: ^3.1.0
+  http: ^1.2.1
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
