--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
   image_picker: ^0.8.7+5
+  http: ^1.2.0
+  flutter_secure_storage: ^9.0.0
+  logging: ^1.1.0
+  flutter_dotenv: ^5.1.0
+  flutter_markdown: ^0.7.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +68,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
